# CVM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  alexnet.py  alexnet2.py  alexnet3.py  alexnet_class_train  args.yaml  cmd.txt  pyproject.toml  requirements.txt  resnet_class_train  vae_fine_runing  vae_fine_tuning  vae_train
VAE/: train.py
YOLO/detect/: train.py
alexnet/classification/: training.py
classifications/: alexnet.py
others/: alexnet2.py  cmd.txt
others/resnet/fpn/: predict.py
others/yolov8/detect/: train.py
resnet/faster_rcnn/: train.py
resnet/faster_rcnn_fpn_v2/: train.py
resnet/fpn/: train.py  training.py
src/cvn/: __init__.py
src/cvn/VAE/: train.py
src/cvn/YOLO/detect/: train.py
src/cvn/alexnet/classification/: inference.py  train.py
src/cvn/resnet/classification/: train.py
tests/: test_yolo_train.py
vae/: fine_tuning.py  sup_fine_tuning.py  train.py
yolov8/detect/: train.py
